--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,12 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![R-CMD-check](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check/badge.svg)](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-R bindings for [sudachi.rs](https://github.com/WorksApplications/sudachi.rs).
+An R wrapper for 'Sudachi'; a modern reimaging of
+[uribo/sudachir](https://github.com/uribo/sudachir) and [yutannihilation/fledgingr](https://github.com/yutannihilation/fledgingr)
+that directly wraps [sudachi.rs](https://github.com/WorksApplications/sudachi.rs) with [savvy](https://github.com/yutannihilation/savvy).
 
 ## Usage
 
