--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check/badge.svg)](https://github.com/paithiov909/sudachir2/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-An R wrapper for 'Sudachi'; a modern reimaging of
+An R wrapper for 'Sudachi'; a modern reimagining of
 [uribo/sudachir](https://github.com/uribo/sudachir) and [yutannihilation/fledgingr](https://github.com/yutannihilation/fledgingr)
 that directly wraps [sudachi.rs](https://github.com/WorksApplications/sudachi.rs) with [savvy](https://github.com/yutannihilation/savvy).
 
