refactor: tweak output

--- a/README.Rmd
+++ b/README.Rmd
@@ -53,10 +53,16 @@ dat <-
 toks <-
   tokenize(
     dat, text, doc_id,
-    tagger = create_tagger(dictionary_path = small_dict)
+    tagger = create_tagger(dictionary_path = small_dict, mode = "C")
   )
 
 toks
 
-prettify(toks)
+prettify(toks) |> str()
 ```
+
+## Versioning
+
+This package is versioned by copying the version number of 'sudachi.rs',
+where the first three digits represent that version number
+and the fourth digit (if any) represents the patch release for this package.
